--- a/css/style.css
+++ b/css/style.css
@@ -530,10 +530,10 @@ footer{
 
 .modal-close{
     position: absolute;
-    top: 0;
-    right: -40px;
+    top: 10px;
+    right: 10px;
     width: 18px;
-    font-size: 65px;
+    font-size: 30px;
     line-height: 32px;
     color: red;
     cursor: pointer;
@@ -650,4 +650,12 @@ footer{
     line-height: 32px;
     color: #fff;
     cursor: pointer;
+}
+
+.show {
+    display: block;
+}
+
+.hide {
+    display: none;
 }
